Fix for Image issue. Not showing on GitHub Pages

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,4 +1,3 @@
-
 body {
   transition: background-color 0.5s ease, color 0.5s ease;
 }
@@ -18,7 +17,6 @@ body {
 }
 
 .hero-section {
-  background-image: url('/src/assets/backgroundimg.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
